# geoqlite

./: .gitignore  CMakeLists.old.txt  CMakeLists.txt  README.md  geoqlite.h.in
include/: geometry.h  goemetry.h  parse.h  stringutils.h
lib/include/: tokenize.h
lib/src/: tokenize.c
scripts/: build_with_cli.sh  rebuild_and_test.sh
src/: cli.c  geometry.c  parse.c  stringutils.c
test/: main.c  testing_utils.c  testing_utils.h
